# drf_blog_api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  hello.py  manage.py  pyproject.toml  requirements.txt
compose/: app.yml  storages.yml
nginx/: default.conf
src/api/: urls.py
src/api/v1/: urls.py
src/api/v1/blog/: serializers.py  views.py
src/app/: config.py
src/apps/: config.py
src/apps/account/: admin.py  apps.py  entities.py  managers.py
src/apps/account/migrations/: 0001_initial.py
src/apps/account/models/: __init__.py  profile.py  user.py
src/apps/account/services/: auth.py  otp_gen.py  senders.py  user.py
src/apps/blog/: admin.py
src/apps/blog/migrations/: 0001_initial.py
src/apps/blog/models/: __init__.py  comments.py  posts.py
src/apps/common/: model_abstracts.py
src/flicksy/: asgi.py  settings.py  urls.py  wsgi.py
src/project/: asgi.py  settings.py  urls.py  wsgi.py
